image turns on hover

--- a/index.html
+++ b/index.html
@@ -14,42 +14,57 @@
 
   <body class="site">
     <header class="split-screen-hero">
-      <div class="content-header">
-        <div class="headshot">
+
+
+          <div class="profile-image-coin">
+            <div class="profile-image front">
+              <img
+                src="/images/little-katy-big-tex.jpg"
+                alt="A woman in front of Big Tex holding a corny dog like a torch"
+              />
+            </div>
+            <div class="profile-image back">
+              <img
+                src="/images/stormtrooper-sammich.jpg"
+                alt="Portrait (photo) of a woman"
+              />
+            </div>
+          </div>
           <!-- left two images as a circle. flip on hover  -->
-        </div>
-        <div class="details">
-          <h1>Katy Cassidy</h1>
-          <p class="subtitle">Frontend Developer</p>
-          <p class="tagline">Tagline la la la</p>
-          <nav class="social-links" aria-label="Social media">
-            <a
-              href="https://github.com/ihatetoast"
-              target="_blank"
-              aria-label="GitHub"
-              >GitHub</a
-            >
-            <a
-              href="https://codepen.io/ihatetoast/"
-              target="_blank"
-              aria-label="CodePen"
-              >CodePen</a
-            >
-            <a
-              href="https://www.linkedin.com/in/cassidykaty/"
-              target="_blank"
-              aria-label="LinkedIn"
-              >LinkedIn</a
-            >
-          </nav>
-        </div>
+
+
+
+      <div class="details">
+        <h1>Hello! I'm Katy Cassidy</h1>
+        <p class="subtitle">I'm a</p>
+        <p class="tagline">Tagline la la la</p>
+        <nav class="social-links" aria-label="Social media">
+          <a
+            href="https://github.com/ihatetoast"
+            target="_blank"
+            aria-label="GitHub"
+            >GitHub</a
+          >
+          <a
+            href="https://codepen.io/ihatetoast/"
+            target="_blank"
+            aria-label="CodePen"
+            >CodePen</a
+          >
+          <a
+            href="https://www.linkedin.com/in/cassidykaty/"
+            target="_blank"
+            aria-label="LinkedIn"
+            >LinkedIn</a
+          >
+        </nav>
       </div>
     </header>
+
     <!-- WILL I NEED AN H2 INTRO TO ANY OF THESE?  -->
     <section class="featured-projects">
       <h2 class="sr-only">Featured Projects</h2>
       <div class="project-grid">
-
         <div class="project-card">
           <div class="img-container">
             <img src="" alt="" />
@@ -66,12 +81,20 @@
               <li>CSS</li>
             </ul>
             <div class="project-links">
-              <li><a href="#" aria-role="button" class="btn btn-primary">Live Site</a></li>
-              <li><a href="#" aria-role="button"  class="btn btn-secondary">View Code</a></li>
+              <li>
+                <a href="#" aria-role="button" class="btn btn-primary"
+                  >Live Site</a
+                >
+              </li>
+              <li>
+                <a href="#" aria-role="button" class="btn btn-secondary"
+                  >View Code</a
+                >
+              </li>
             </div>
           </div>
         </div>
-         <div class="project-card">
+        <div class="project-card">
           <div class="img-container">
             <img src="" alt="" />
           </div>
@@ -87,12 +110,20 @@
               <li>CSS</li>
             </ul>
             <div class="project-links">
-              <li><a href="#" aria-role="button" class="btn btn-primary">Live Site</a></li>
-              <li><a href="#" aria-role="button"  class="btn btn-secondary">View Code</a></li>
+              <li>
+                <a href="#" aria-role="button" class="btn btn-primary"
+                  >Live Site</a
+                >
+              </li>
+              <li>
+                <a href="#" aria-role="button" class="btn btn-secondary"
+                  >View Code</a
+                >
+              </li>
             </div>
           </div>
         </div>
-         <div class="project-card">
+        <div class="project-card">
           <div class="img-container">
             <img src="" alt="" />
           </div>
@@ -108,12 +139,20 @@
               <li>CSS</li>
             </ul>
             <div class="project-links">
-              <li><a href="#" aria-role="button" class="btn btn-primary">Live Site</a></li>
-              <li><a href="#" aria-role="button"  class="btn btn-secondary">View Code</a></li>
+              <li>
+                <a href="#" aria-role="button" class="btn btn-primary"
+                  >Live Site</a
+                >
+              </li>
+              <li>
+                <a href="#" aria-role="button" class="btn btn-secondary"
+                  >View Code</a
+                >
+              </li>
             </div>
           </div>
         </div>
-         <div class="project-card">
+        <div class="project-card">
           <div class="img-container">
             <img src="" alt="" />
           </div>
@@ -129,12 +168,19 @@
               <li>CSS</li>
             </ul>
             <div class="project-links">
-              <li><a href="#" aria-role="button" class="btn btn-primary">Live Site</a></li>
-              <li><a href="#" aria-role="button"  class="btn btn-secondary">View Code</a></li>
+              <li>
+                <a href="#" aria-role="button" class="btn btn-primary"
+                  >Live Site</a
+                >
+              </li>
+              <li>
+                <a href="#" aria-role="button" class="btn btn-secondary"
+                  >View Code</a
+                >
+              </li>
             </div>
           </div>
         </div>
-
       </div>
     </section>
 
@@ -158,7 +204,7 @@
     <!-- NEW SECTION OR BETTER TO BE A FOOTER?  -->
     <footer class="contact">
       <h2 class="sr-only">Contact</h2>
-      <p>Let's do this!</p>
+      <p>Let's take it to elev, dev!</p>
       <!-- obfuscate via js and use svg or emoji for phone and mail icons?  -->
       <div class="contact-links">
         <a href="mailto:k.cassidy@outlook.com">Email</a>
