--- a/index.html
+++ b/index.html
@@ -8,60 +8,135 @@
       content="Katy Cassidy's portfolio as IHateToast."
     />
     <meta name="author" content="Katy Cassidy | ihatetoast" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <title>Katy Cassidy: portfolio</title>
     <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico" />
   </head>
 
   <body class="site">
-    <header class="split-screen-hero">
-
-
-          <div class="profile-image-coin">
-            <div class="profile-image front">
-              <img
-                src="/images/little-katy-big-tex.jpg"
-                alt="A woman in front of Big Tex holding a corny dog like a torch"
-              />
-            </div>
-            <div class="profile-image back">
-              <img
-                src="/images/stormtrooper-sammich.jpg"
-                alt="Portrait (photo) of a woman"
-              />
-            </div>
-          </div>
-          <!-- left two images as a circle. flip on hover  -->
-
-
+    <header>
+      <nav class="nav-bar">
+        <p class="iht"><span class="iht-logo"><img src="/images/iht-logo.png" alt="greyhound sitting up eating toast"></span>ihatetoast</p>
+        <!-- hamburger  -->
+        <a href="#" id="hamburger-link" class="hamburger">
+          <span class="bar"> </span>
+          <span class="bar"> </span>
+          <span class="bar"></span>
+        </a>
+        <ul class="menu-links">
+          <li><a href="#featured-projects">projects</a></li>
+          <li><a href="#about">about</a></li>
+          <li><a href="#contact">contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="split-screen-hero">
+      <div class="profile-image-coin">
+        <div class="profile-image front">
+          <img
+            src="/images/little-katy-big-tex.jpg"
+            alt="A woman in front of Big Tex holding a corny dog like a torch"
+          />
+        </div>
+        <div class="profile-image back">
+          <img
+            src="/images/stormtrooper-sammich.jpg"
+            alt="Portrait (photo) of a woman"
+          />
+        </div>
+      </div>
+      <!-- left two images as a circle. flip on hover  -->
 
       <div class="details">
-        <h1>Hello! I'm Katy Cassidy</h1>
-        <p class="subtitle">I'm a</p>
-        <p class="tagline">Tagline la la la</p>
+        <h1>Katy Cassidy | Frontend Developer</h1>
+        <p class="subtitle">
+          I build accessible React components and
+          occasionally sneak German language lessons or plug greyhound adoption
+          into my side projects. 6+ years building things people actually use
+          for companies in the social media, fin-tech, and marketing industries.
+          Always building; always learning.
+        </p>
         <nav class="social-links" aria-label="Social media">
           <a
             href="https://github.com/ihatetoast"
             target="_blank"
             aria-label="GitHub"
-            >GitHub</a
+            class="social-links-holder gitHub"
           >
+            <div class="block">
+              <div class="social-links-platform">GitHub</div>
+              <div class="social-links-handle">
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                >
+                  <path
+                    d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+                  />
+                </svg>
+                <span>ihatetoast</span>
+              </div>
+            </div>
+          </a>
           <a
             href="https://codepen.io/ihatetoast/"
             target="_blank"
             aria-label="CodePen"
-            >CodePen</a
+            class="social-links-holder codePen"
+          >
+            <div class="block">
+              <div class="social-links-platform">CodePen</div>
+              <div class="social-links-handle">
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                >
+                  <path
+                    d="M24 8.182l-.018-.087-.017-.05c-.01-.024-.018-.05-.03-.075-.003-.018-.015-.034-.02-.05l-.035-.067-.03-.05-.044-.06-.046-.045-.06-.045-.046-.03-.06-.044-.044-.04-.015-.02L12.58.19c-.347-.232-.796-.232-1.142 0L.453 7.502l-.015.015-.044.035-.06.05-.038.04-.05.056-.037.045-.05.06c-.02.017-.03.03-.03.046l-.05.06-.02.06c-.02.01-.02.04-.03.07l-.01.05C0 8.12 0 8.15 0 8.18v7.497c0 .044.003.09.01.135l.01.046c.005.03.01.06.02.086l.015.05c.01.027.016.053.027.075l.022.05c0 .01.015.04.03.06l.03.04c.015.01.03.04.045.06l.03.04.04.04c.01.013.01.03.03.03l.06.042.04.03.01.014 10.97 7.33c.164.12.375.163.57.163s.39-.06.57-.18l10.99-7.28.014-.01.046-.037.06-.043.048-.036.052-.058.033-.045.04-.06.03-.05.03-.07.016-.052.03-.077.015-.045.03-.08v-7.5c0-.05 0-.095-.016-.14l-.014-.045.044.003zm-11.99 6.28l-3.65-2.44 3.65-2.442 3.65 2.44-3.65 2.44zm-1.034-6.674l-4.473 2.99L2.89 8.362l8.086-5.39V7.79zm-6.33 4.233l-2.582 1.73V10.3l2.582 1.726zm1.857 1.25l4.473 2.99v4.82L2.89 15.69l3.618-2.417v-.004zm6.537 2.99l4.474-2.98 3.613 2.42-8.087 5.39v-4.82zm6.33-4.23l2.583-1.72v3.456l-2.583-1.73zm-1.855-1.24L13.042 7.8V2.97l8.085 5.39-3.612 2.415v.003z"
+                  />
+                </svg>
+
+                <span>ihatetoast</span>
+              </div>
+            </div></a
           >
           <a
             href="https://www.linkedin.com/in/cassidykaty/"
             target="_blank"
             aria-label="LinkedIn"
-            >LinkedIn</a
+            class="social-links-holder linkedIn"
           >
+            <div class="block">
+              <div class="social-links-platform">LinkedIn</div>
+              <div class="social-links-handle">
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                >
+                  <path
+                    d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+                  />
+                </svg>
+                <span>ihatetoast</span>
+              </div>
+            </div>
+          </a>
         </nav>
       </div>
-    </header>
+    </section>
 
-    <!-- WILL I NEED AN H2 INTRO TO ANY OF THESE?  -->
+    <a id="featured-projects"></a>
     <section class="featured-projects">
       <h2 class="sr-only">Featured Projects</h2>
       <div class="project-grid">
@@ -183,25 +258,42 @@
         </div>
       </div>
     </section>
+<a id="about"></a>
+    <section id="about" class="about">
+      <h2 class="sr-only">About me</h2>
+      <div class="tab-buttons">
+        <button class="tab-btn active" data-tab="developer">
+          About the Developer
+        </button>
+        <button class="tab-btn" data-tab="person">About the Person</button>
+      </div>
 
-    <section class="skills">
-      <h2 class="sr-only">Skills and tech</h2>
-      <!-- LINE OF WORDS OR LOGOS.   -->
-      <ul>
-        <li>HTML5</li>
-        <li>CSS3</li>
-        <li>JavaScript (ES6+)</li>
-        <li>React</li>
-        <li>Responsive Design</li>
-        <li>Accessibility (a11y)</li>
-        <li>Git & GitHub</li>
-        <li>TailWind</li>
-        <li>TypeScript</li>
-        <li>Vite</li>
-      </ul>
+      <div class="tab-content active" id="developer">
+        <p>Your tech approach (3-4 sentences)</p>
+        <div class="tech-icons">
+          <span>HTML5</span>
+          <span>CSS3</span>
+          <span>JavaScript (ES6+)</span>
+          <span>React</span>
+          <span>Responsive Design</span>
+          <span>Accessibispanty (a11y)</span>
+          <span>Git & GitHub</span>
+          <span>TailWind</span>
+          <span>TypeScript</span>
+          <span>Vite</span>
+        </div>
+      </div>
+
+      <div class="tab-content" id="person">
+        <p>
+          greyhounds adoption, dance, monarch conservation, stabbing things
+          socially acceptable
+        </p>
+      </div>
     </section>
 
     <!-- NEW SECTION OR BETTER TO BE A FOOTER?  -->
+     <a id="contact"></a>
     <footer class="contact">
       <h2 class="sr-only">Contact</h2>
       <p>Let's take it to elev, dev!</p>
@@ -215,82 +307,3 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
-
-<!-- OLD ASIDE. TO MOVE TO HERO FOR ROLL OVER EFFECT  -->
-<!-- <aside class="socialMedia">
-        <div>
-          <div class="socialMedia-container">
-            <a
-              href="https://github.com/ihatetoast"
-              target="_blank"
-              class="socialMedia-holder gitHub"
-              aria-label="GitHub"
-            >
-              <div class="block">
-                <div class="socialMediaPlatform">GitHub</div>
-                <div class="socialMediaHandle">
-                  <svg
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="currentColor"
-                  >
-                    <path
-                      d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
-                    />
-                  </svg>
-                  <span>ihatetoast</span>
-                </div>
-              </div>
-            </a>
-            <a
-              href="https://codepen.io/ihatetoast/"
-              target="_blank"
-              class="socialMedia-holder codePen"
-              aria-label="CodePen"
-            >
-              <div class="block">
-                <div class="socialMediaPlatform">CodePen</div>
-                <div class="socialMediaHandle">
-                  <svg
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="currentColor"
-                  >
-                    <path
-                      d="M24 8.182l-.018-.087-.017-.05c-.01-.024-.018-.05-.03-.075-.003-.018-.015-.034-.02-.05l-.035-.067-.03-.05-.044-.06-.046-.045-.06-.045-.046-.03-.06-.044-.044-.04-.015-.02L12.58.19c-.347-.232-.796-.232-1.142 0L.453 7.502l-.015.015-.044.035-.06.05-.038.04-.05.056-.037.045-.05.06c-.02.017-.03.03-.03.046l-.05.06-.02.06c-.02.01-.02.04-.03.07l-.01.05C0 8.12 0 8.15 0 8.18v7.497c0 .044.003.09.01.135l.01.046c.005.03.01.06.02.086l.015.05c.01.027.016.053.027.075l.022.05c0 .01.015.04.03.06l.03.04c.015.01.03.04.045.06l.03.04.04.04c.01.013.01.03.03.03l.06.042.04.03.01.014 10.97 7.33c.164.12.375.163.57.163s.39-.06.57-.18l10.99-7.28.014-.01.046-.037.06-.043.048-.036.052-.058.033-.045.04-.06.03-.05.03-.07.016-.052.03-.077.015-.045.03-.08v-7.5c0-.05 0-.095-.016-.14l-.014-.045.044.003zm-11.99 6.28l-3.65-2.44 3.65-2.442 3.65 2.44-3.65 2.44zm-1.034-6.674l-4.473 2.99L2.89 8.362l8.086-5.39V7.79zm-6.33 4.233l-2.582 1.73V10.3l2.582 1.726zm1.857 1.25l4.473 2.99v4.82L2.89 15.69l3.618-2.417v-.004zm6.537 2.99l4.474-2.98 3.613 2.42-8.087 5.39v-4.82zm6.33-4.23l2.583-1.72v3.456l-2.583-1.73zm-1.855-1.24L13.042 7.8V2.97l8.085 5.39-3.612 2.415v.003z"
-                    />
-                  </svg>
-
-                  <span>ihatetoast</span>
-                </div>
-              </div>
-            </a>
-            <a
-              href="https://www.linkedin.com/in/cassidykaty/"
-              target="_blank"
-              class="socialMedia-holder linkedIn"
-              aria-label="LinkedIn"
-            >
-              <div class="block">
-                <div class="socialMediaPlatform">LinkedIn</div>
-                <div class="socialMediaHandle">
-                  <svg
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="currentColor"
-                  >
-                    <path
-                      d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
-                    />
-                  </svg>
-                  <span>ihatetoast</span>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="clear"></div>
-        </div>
-      </aside> -->
