--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
       rel="stylesheet"
     />
     <title>Katy Cassidy: portfolio</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
   </head>
 
   <body class="site">
     <header>
       <nav class="nav-bar">
-        <p class="iht"><span class="iht-logo"><img src="/images/iht-logo.png" alt="greyhound sitting up eating toast"></span>ihatetoast</p>
+        <p class="iht">
+          <span class="iht-logo"
+            ><img
+              src="/images/iht-logo.png"
+              alt="greyhound sitting up eating toast" /></span
+          >ihatetoast
+        </p>
         <!-- hamburger  -->
         <a href="#" id="hamburger-link" class="hamburger">
           <span class="bar"> </span>
@@ -53,14 +59,54 @@
       <!-- left two images as a circle. flip on hover  -->
 
       <div class="details">
-        <h1>Katy Cassidy | Frontend Developer</h1>
+        <h1>
+          Katy Cassidy <br class="title-break" /><span class="title-pipe"
+            >|</span
+          >
+          Frontend Developer
+        </h1>
         <p class="subtitle">
-          I build accessible React components and
-          occasionally sneak German language lessons or plug greyhound adoption
-          into my side projects. 6+ years building things people actually use
-          for companies in the social media, fin-tech, and marketing industries.
-          Always building; always learning.
+          I build accessible React components and occasionally sneak German
+          language lessons or plug greyhound adoption into my side projects. 6+
+          years building things people actually use for companies in the social
+          media, fin-tech, and marketing industries. Always building; always
+          learning.
         </p>
+        <nav class="social-icons">
+          <a
+            href="https://github.com/ihatetoast"
+            target="_blank"
+            aria-label="GitHub"
+          >
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+              <path
+                d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+              />
+            </svg>
+          </a>
+          <a
+            href="https://codepen.io/ihatetoast/"
+            target="_blank"
+            aria-label="CodePen"
+          >
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+              <path
+                d="M24 8.182l-.018-.087-.017-.05c-.01-.024-.018-.05-.03-.075-.003-.018-.015-.034-.02-.05l-.035-.067-.03-.05-.044-.06-.046-.045-.06-.045-.046-.03-.06-.044-.044-.04-.015-.02L12.58.19c-.347-.232-.796-.232-1.142 0L.453 7.502l-.015.015-.044.035-.06.05-.038.04-.05.056-.037.045-.05.06c-.02.017-.03.03-.03.046l-.05.06-.02.06c-.02.01-.02.04-.03.07l-.01.05C0 8.12 0 8.15 0 8.18v7.497c0 .044.003.09.01.135l.01.046c.005.03.01.06.02.086l.015.05c.01.027.016.053.027.075l.022.05c0 .01.015.04.03.06l.03.04c.015.01.03.04.045.06l.03.04.04.04c.01.013.01.03.03.03l.06.042.04.03.01.014 10.97 7.33c.164.12.375.163.57.163s.39-.06.57-.18l10.99-7.28.014-.01.046-.037.06-.043.048-.036.052-.058.033-.045.04-.06.03-.05.03-.07.016-.052.03-.077.015-.045.03-.08v-7.5c0-.05 0-.095-.016-.14l-.014-.045.044.003zm-11.99 6.28l-3.65-2.44 3.65-2.442 3.65 2.44-3.65 2.44zm-1.034-6.674l-4.473 2.99L2.89 8.362l8.086-5.39V7.79zm-6.33 4.233l-2.582 1.73V10.3l2.582 1.726zm1.857 1.25l4.473 2.99v4.82L2.89 15.69l3.618-2.417v-.004zm6.537 2.99l4.474-2.98 3.613 2.42-8.087 5.39v-4.82zm6.33-4.23l2.583-1.72v3.456l-2.583-1.73zm-1.855-1.24L13.042 7.8V2.97l8.085 5.39-3.612 2.415v.003z"
+              />
+            </svg>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/cassidykaty/"
+            target="_blank"
+            aria-label="LinkedIn"
+          >
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+              <path
+                d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+              />
+            </svg>
+          </a>
+        </nav>
         <nav class="social-links" aria-label="Social media">
           <a
             href="https://github.com/ihatetoast"
@@ -136,19 +182,116 @@
       </div>
     </section>
 
-    <a id="featured-projects"></a>
+    <a class="section-anchor" id="featured-projects"></a>
     <section class="featured-projects">
       <h2 class="sr-only">Featured Projects</h2>
       <div class="project-grid">
         <div class="project-card">
           <div class="img-container">
-            <img src="" alt="" />
+            <img
+              src="/images/dog-data-acc.png"
+              alt="table of dog data with one row opened to show details of one dog"
+            />
           </div>
+          <!-- <div class="project-video-container">
+            <video muted autoplay loop playsinline>
+              <source src="/images/dog-data.mp4" type="video/mp4">
+            </video>
+          </div> -->
           <div class="project-details">
-            <h3 class="project-title">Project title ONE</h3>
+            <h3 class="project-title">Greyhound Data Table</h3>
             <p class="project-description">
-              beep bop boop beep bop boop beep bop boop beep bop boop beep bop
-              boop beep bop boop
+              Greyhound data displayed as a table with rows that either open as
+              an accordion or trigger a modal with filtering and sorting
+              functionality.
+            </p>
+            <ul>
+              <li>HTML / CSS</li>
+              <li>React</li>
+              <li>Vite</li>
+            </ul>
+            <div class="project-links">
+              <a
+                href="https://www.ihatetoast.com/available-hound-data-table/"
+                target="_blank"
+                rel="noreferrer"
+                aria-role="button"
+                class="btn btn-primary"
+                >Live Site</a
+              >
+
+              <a
+                href="https://github.com/ihatetoast/available-hound-data-table"
+                target="_blank"
+                rel="noreferrer"
+                aria-role="button"
+                class="btn btn-secondary"
+                >View Code</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="img-container">
+            <img
+              src="/images/ger-trivia.png"
+              alt="result of quiz showing bar graph and map of Germany"
+            />
+          </div>
+          <!-- <div class="project-video-container">
+            <video muted autoplay loop playsinline>
+              <source src="/images/german-trivia-app.mp4" type="video/mp4">
+            </video>
+          </div> -->
+          <div class="project-details">
+            <h3 class="project-title">German Trivia App</h3>
+            <p class="project-description">
+              A trivia app in which the player chooses a topic to test their
+              knowledge on. A custom Bierstein timer shows how much time is
+              left. Results displayed as a flag bar graph.
+            </p>
+            <ul>
+              <li>HTML / CSS</li>
+              <li>React</li>
+              <li>Vite</li>
+            </ul>
+            <div class="project-links">
+              <a
+                href="https://www.ihatetoast.com/germany-trivia-quiz/"
+                target="_blank"
+                rel="noreferrer"
+                aria-role="button"
+                class="btn btn-primary"
+                >Live Site</a
+              >
+
+              <a
+                href="https://github.com/ihatetoast/germany-trivia-quiz"
+                target="_blank"
+                rel="noreferrer"
+                aria-role="button"
+                class="btn btn-secondary"
+                >View Code</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="img-container">
+            <img src="/images/shuggapus.png" alt="pictures of cats" />
+          </div>
+          <!-- <div class="project-video-container">
+            <video muted autoplay loop playsinline>
+              <source src="/images/shuggapus.mp4" type="video/mp4">
+            </video>
+          </div> -->
+          <div class="project-details">
+            <h3 class="project-title">Meowr-Shuggapuss</h3>
+            <p class="project-description">
+              Cat dating app to hiss or pspsps to favourite and review
+              favourited cats using the Cat API, Material UI, and Local Storage.
             </p>
             <ul>
               <li>React</li>
@@ -156,127 +299,96 @@
               <li>CSS</li>
             </ul>
             <div class="project-links">
-              <li>
-                <a href="#" aria-role="button" class="btn btn-primary"
-                  >Live Site</a
-                >
-              </li>
-              <li>
-                <a href="#" aria-role="button" class="btn btn-secondary"
-                  >View Code</a
-                >
-              </li>
+              <a
+                href="http://www.ihatetoast.com/meowr-shuggapuss/"
+                target="_blank"
+                rel="noreferrer"
+                aria-role="button"
+                class="btn btn-primary"
+                >Live Site</a
+              >
+
+              <a
+                href="https://github.com/ihatetoast/meowr-shuggapuss"
+                target="_blank"
+                rel="noreferrer"
+                aria-role="button"
+                class="btn btn-secondary"
+                >View Code</a
+              >
             </div>
           </div>
         </div>
         <div class="project-card">
           <div class="img-container">
-            <img src="" alt="" />
+            <img
+              src="/images/hangdog-game.png"
+              alt="hangman game with typewriter keys"
+            />
           </div>
+          <!-- <div class="project-video-container">
+            <video muted autoplay loop playsinline>
+              <source src="/images/hangdog.mp4" type="video/mp4">
+            </video>
+          </div> -->
           <div class="project-details">
-            <h3 class="project-title">Project title TWO</h3>
+            <h3 class="project-title">Hangdog</h3>
             <p class="project-description">
-              beep bop boop beep bop boop beep bop boop beep bop boop beep bop
-              boop beep bop boop
+              A hangman app that pulls breed data from the Dog API after the
+              game is over.
             </p>
             <ul>
+              <li>HTML / CSS</li>
               <li>React</li>
-              <li>TypeScript</li>
-              <li>CSS</li>
+              <li>Vite</li>
             </ul>
             <div class="project-links">
-              <li>
-                <a href="#" aria-role="button" class="btn btn-primary"
-                  >Live Site</a
-                >
-              </li>
-              <li>
-                <a href="#" aria-role="button" class="btn btn-secondary"
-                  >View Code</a
-                >
-              </li>
-            </div>
-          </div>
-        </div>
-        <div class="project-card">
-          <div class="img-container">
-            <img src="" alt="" />
-          </div>
-          <div class="project-details">
-            <h3 class="project-title">Project title THREE</h3>
-            <p class="project-description">
-              beep bop boop beep bop boop beep bop boop beep bop boop beep bop
-              boop beep bop boop
-            </p>
-            <ul>
-              <li>React</li>
-              <li>TypeScript</li>
-              <li>CSS</li>
-            </ul>
-            <div class="project-links">
-              <li>
-                <a href="#" aria-role="button" class="btn btn-primary"
-                  >Live Site</a
-                >
-              </li>
-              <li>
-                <a href="#" aria-role="button" class="btn btn-secondary"
-                  >View Code</a
-                >
-              </li>
-            </div>
-          </div>
-        </div>
-        <div class="project-card">
-          <div class="img-container">
-            <img src="" alt="" />
-          </div>
-          <div class="project-details">
-            <h3 class="project-title">Project title FOUR</h3>
-            <p class="project-description">
-              beep bop boop beep bop boop beep bop boop beep bop boop beep bop
-              boop beep bop boop
-            </p>
-            <ul>
-              <li>React</li>
-              <li>TypeScript</li>
-              <li>CSS</li>
-            </ul>
-            <div class="project-links">
-              <li>
-                <a href="#" aria-role="button" class="btn btn-primary"
-                  >Live Site</a
-                >
-              </li>
-              <li>
-                <a href="#" aria-role="button" class="btn btn-secondary"
-                  >View Code</a
-                >
-              </li>
+              <a
+                href="http://www.ihatetoast.com/hangdog/"
+                target="_blank"
+                rel="noreferrer"
+                aria-role="button"
+                class="btn btn-primary"
+                >Live Site</a
+              >
+
+              <a
+                href="https://github.com/ihatetoast/hangdog"
+                target="_blank"
+                rel="noreferrer"
+                aria-role="button"
+                class="btn btn-secondary"
+                >View Code</a
+              >
             </div>
           </div>
         </div>
       </div>
     </section>
-<a id="about"></a>
+    <a class="section-anchor" id="about"></a>
     <section id="about" class="about">
       <h2 class="sr-only">About me</h2>
       <div class="tab-buttons">
         <button class="tab-btn active" data-tab="developer">
-          About the Developer
+          Katy the dev
         </button>
-        <button class="tab-btn" data-tab="person">About the Person</button>
+        <button class="tab-btn" data-tab="person">Katy the person</button>
       </div>
 
       <div class="tab-content active" id="developer">
-        <p>Your tech approach (3-4 sentences)</p>
+        <p>
+          I'm a creative frontend developer who loves building interactive React apps that
+          solve real problems, from teaching German to helping
+          greyhounds find homes. I build with accessibility&mdash;why limit our audience? My 4.5 years working for Meta and Bank of America taught
+          me that clean code, good documentation, and regression testing are your friends.
+        </p>
         <div class="tech-icons">
           <span>HTML5</span>
           <span>CSS3</span>
           <span>JavaScript (ES6+)</span>
           <span>React</span>
           <span>Responsive Design</span>
-          <span>Accessibispanty (a11y)</span>
+          <span>Accessibity (a11y)</span>
           <span>Git & GitHub</span>
           <span>TailWind</span>
           <span>TypeScript</span>
@@ -285,22 +397,25 @@
       </div>
 
       <div class="tab-content" id="person">
-        <p>
-          greyhounds adoption, dance, monarch conservation, stabbing things
-          socially acceptable
-        </p>
+        <div>
+          <p>
+            When I am not banging away at the keyboard, I'm 
+          </p>
+        </div>
+        <div></div>
       </div>
     </section>
 
     <!-- NEW SECTION OR BETTER TO BE A FOOTER?  -->
-     <a id="contact"></a>
+    <a class="section-anchor" id="contact"></a>
     <footer class="contact">
       <h2 class="sr-only">Contact</h2>
-      <p>Let's take it to elev, dev!</p>
+      <p>Let's take it to elev, ma dev!</p>
       <!-- obfuscate via js and use svg or emoji for phone and mail icons?  -->
       <div class="contact-links">
-        <a href="mailto:k.cassidy@outlook.com">Email</a>
-        <a href="">555-555-5555</a>
+        <p><span class="contact-emoji">✉︎</span> <span id="email"></span></p>
+        <p><span class="contact-emoji">☏</span> <span id="mob"></span></p>
+        <span id="mob"></span>
       </div>
     </footer>
     <!-- END #MAIN -->
