added nnmm link to about

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             >
               <source src="/images/shuggapuss.mp4" type="video/mp4" />
             </video>
-              <button class="video-toggle" aria-label="Play demo button"></button>
+            <button class="video-toggle" aria-label="Play demo button"></button>
           </div>
           <div class="project-details">
             <h3 class="project-title">Meowr-Shuggapuss</h3>
@@ -389,7 +389,7 @@
     </section>
 
     <a class="section-anchor" id="about"></a>
-        <!-- ABOUT  -->
+    <!-- ABOUT  -->
     <section id="about" class="about">
       <h2 class="sr-only">About me</h2>
 
@@ -693,7 +693,12 @@
                 cha cha to country western two-step. I volunteer with a local
                 greyhound adoption group helping people find their next hound
                 and getting hounds that are fresh off the track used to living
-                in a house with cats.
+                in a house with cats (<a
+                  href="https://needlenosesandmurdermittens"
+                  target="_blank"
+                  rel="noreferrer"
+                  >Needle Noses &amp; Murder Mittens</a
+                >)
               </p>
               <p>
                 Other things that keep me out of trouble (mostly) are walks in
