added ladybug calc

--- a/index.html
+++ b/index.html
@@ -290,6 +290,58 @@
         </div>
         <!-- THIRD PROJECT  -->
         <div class="project-card">
+          <div class="img-container" data-project="ladybug-calculator">
+            <img
+              src="/images/ladybug-calculator.png"
+              alt="a calculator with ladybug and flower buttons showing a calculation"
+            />
+            <video
+              class="project-video"
+              data-project="ladybug-calculator"
+              muted
+              autoplay
+              loop
+              playsinline
+            >
+              <source src="/images/ladybug-calculator.mp4" type="video/mp4" />
+            </video>
+            <button class="video-toggle" aria-label="Play demo button"></button>
+          </div>
+
+          <div class="project-details">
+            <h3 class="project-title">Ladybug Calculator</h3>
+            <p class="project-description">
+              A calculator with pure CSS images for the buttons, which animate
+              on hover. Calculator handles order of operations, decimals, and
+              toggles +/-.
+            </p>
+            <ul class="skills-list">
+              <li class="skill-item">HTML / CSS</li>
+              <li class="skill-item">React</li>
+               <li class="skill-item">TypeScript</li>
+              <li class="skill-item">Vite</li>
+            </ul>
+            <div class="project-links">
+              <a
+                href="https://www.ihatetoast.com/ladybug-calculator/"
+                target="_blank"
+                rel="noreferrer"
+                class="btn btn-primary"
+                >Live Site</a
+              >
+              <a
+                href="https://github.com/ihatetoast/ladybug-calculator"
+                target="_blank"
+                rel="noreferrer"
+                class="btn btn-secondary"
+                >View Code</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <!-- FOURTH PROJECT  -->
+        <div class="project-card">
           <div class="img-container" data-project="shuggapuss">
             <img src="/images/shuggapuss.png" alt="pictures of cats" />
             <video
@@ -334,7 +386,7 @@
           </div>
         </div>
 
-        <!-- FOURTH PROJECT  -->
+        <!-- FIFTH PROJECT  -->
 
         <div class="project-card">
           <div class="img-container" data-project="hangdog">
